2003-10-09  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* em-icon-stream.c: (emis_sync_close):
        Use gnome-thumbnail_scale_down_pixbuf if available,
        for better performance.

2003-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c: Add a hide_mask to the
	create-rule-from-message bars so that we don't segfault when we
	right click with a multi-selection.

2003-10-06  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config-druid.c (identity_prepare): Fixed.

	* mail-ops.c (fetch_mail_fetch): Always save the uid cache no
	matter what.

2003-10-03  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* mail-config-druid.c (identity_prepare), (config_wizard_new):
	Convert real name to UTF-8 if needed.

2003-10-03  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-browser.c (emfb_set_folder): Disable the selection of
	the first unread message for now. This is actually annoying the
	fuck out of me, Radek, and a few other people.

2003-10-02  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>

	* mail-config-druid.c: Fix for 40917 "Backspace shouldn't
	highlight the whole remaining string in Setup Assistant".
	(identity_changed): Removed repeated focussing per keystroke.
	functions
	(source_changed): Same.
	(transport_changed): Here too.
	(management_changed): And here.
	(identity_prepare): Removed the initial highlighting for Full
	Name, also the unneeded intial grab_focus.

2003-10-02  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (efh_format_timeout): zero out last_part if
	we're clearing.  Uh, this fixes, but shouldn't, part of #49034.
	The problem is the 'last part' logic is based on the address,
	which can quite easily be repeated for different messages.

	* em-folder-view.c (emfv_list_message_selected): reverted jeff's
	patch for #48618, use a much simpler method.

	* em-message-browser.c (emmb_destroy): hook onto destroy handler,
	we need to destroy the messagelist ourselves, since we dont attach
	it to any parent window.
